fix: clipper bottom doesn't show properly on bigger screens

--- a/styles/ClippedImage.module.css
+++ b/styles/ClippedImage.module.css
@@ -1,7 +1,7 @@
 /* Window effect for image */
 .clipper {
   height: 400px;
-  background-color: #DFAD57;
+  background-color: #dfad57;
   position: absolute;
   width: 200px;
   right: 0;
@@ -28,7 +28,7 @@
 }
 
 .clipper.bottom img {
-  top: 400px;
+  top: 600px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -47,4 +47,7 @@
     margin-top: -400px;
   }
 
+  .clipper.bottom img {
+    top: 400px;
+  }
 }
